--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "web",
+  "name": "docs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@repo/ui": "*",
-    "next": "14.2.6",
+    "next": "^14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
